--- a/grpc-node-client/package.json
+++ b/grpc-node-client/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "@zozs/grpc-rust-node",
+  "name": "grpc-node-client",
   "version": "0.1.0",
   "description": "Rust <-> Node communication using gRPC",
-  "main": "server.js",
+  "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "Linus Karlsson <linus@zozs.se>",
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.5.7",
