--- a/grpc-server/Cargo.toml
+++ b/grpc-server/Cargo.toml
@@ -11,6 +11,9 @@ prost = "0.12.6"
 tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
 tonic = "0.11.0"
 anchor-client = { version = "0.30.0 ", features = ["async"] }
+privy = { path = "../programs/privy", features = ["no-entrypoint"] }
+serde = "1.0.203"
+serde_json = "1.0.120"
 
 [dependencies.diesel_migrations]
 version = "2.2.0"
