--- a/grpc-server/Cargo.toml
+++ b/grpc-server/Cargo.toml
@@ -14,6 +14,12 @@ anchor-client = { version = "0.30.0 ", features = ["async"] }
 privy = { path = "../programs/privy", features = ["no-entrypoint"] }
 serde = "1.0.203"
 serde_json = "1.0.120"
+flate2 = "1.0"
+aes = "0.7"
+block-modes = "0.8"
+block-padding = "0.2"
+base64 = "0.13"
+brotli = "3.3.4"
 
 [dependencies.diesel_migrations]
 version = "2.2.0"
