--- a/grpc-server/Cargo.toml
+++ b/grpc-server/Cargo.toml
@@ -8,7 +8,8 @@ chrono = "0.4.38"
 diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
 dotenvy = "0.15"
 prost = "0.12.6"
-tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "full"] }
+hyper = { version = "0.14.0", features = ["full"] }
 tonic = "0.11.0"
 anchor-client = { version = "0.30.0 ", features = ["async"] }
 privy = { path = "../program/programs/privy", features = ["no-entrypoint"] }
