--- a/grpc-server/Cargo.toml
+++ b/grpc-server/Cargo.toml
@@ -11,7 +11,7 @@ prost = "0.12.6"
 tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
 tonic = "0.11.0"
 anchor-client = { version = "0.30.0 ", features = ["async"] }
-privy = { path = "../programs/privy", features = ["no-entrypoint"] }
+privy = { path = "../program/programs/privy", features = ["no-entrypoint"] }
 serde = "1.0.203"
 serde_json = "1.0.120"
 flate2 = "1.0"
