--- a/grpc-server/Cargo.toml
+++ b/grpc-server/Cargo.toml
@@ -9,7 +9,6 @@ diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
 dotenvy = "0.15"
 prost = "0.12.6"
 tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "full"] }
-hyper = { version = "0.14.0", features = ["full"] }
 tonic = "0.11.0"
 anchor-client = { version = "0.30.0 ", features = ["async"] }
 privy = { path = "../program/programs/privy", features = ["no-entrypoint"] }
@@ -21,6 +20,8 @@ block-modes = "0.8"
 block-padding = "0.2"
 base64 = "0.13"
 brotli = "3.3.4"
+tonic-web = "0.11.0"
+tonic-health = "0.11.0"
 
 [dependencies.diesel_migrations]
 version = "2.2.0"
