refactor: 💡 used sdk in program tests

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
                 "Anchor Build && Deploy",
                 // "Solana Logs",
                 "Anchor Test",
-                "GRPC Server Start",
+                // "GRPC Server Start",
             ],
             "problemMatcher": []
         },
