--- a/program/package.json
+++ b/program/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.0",
     "crypto": "^1.0.1",
+    "node-forge": "^1.3.1",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
