--- a/sdk/tsconfig.json
+++ b/sdk/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "allowJs": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "include": [
     "**/*.ts",
