--- a/sdk/package.json
+++ b/sdk/package.json
@@ -2,7 +2,7 @@
   "name": "@privy/sdk",
   "version": "0.0.1",
   "description": "Privy Utility SDK",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -watch",
@@ -22,6 +22,7 @@
     "zlib": "^1.0.5"
   },
   "devDependencies": {
+    "@types/bn.js": "^5.1.5",
     "@types/node": "^22.0.0",
     "@types/node-forge": "^1.3.11",
     "typescript": "^5.5.3"
