--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@coral-xyz/anchor": "^0.30.1",
     "@grpc/grpc-js": "^1.5.7",
     "@grpc/proto-loader": "^0.6.9",
+    "@privy/sdk": "file:/Users/naidu/Documents/work/privy/sdk",
     "@react-hook/resize-observer": "^1.2.6",
     "@solana/wallet-adapter-base": "^0.9.18",
     "@solana/wallet-adapter-react": "^0.15.20",
