--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "react-minimal-pie-chart": "^8.3.0",
-    "tiny-invariant": "^1.3.1"
+    "tiny-invariant": "^1.3.1",
+    "ts-loader": "^9.5.1"
   },
   "devDependencies": {
     "@types/antd": "^1.0.0",
