--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,6 +21,9 @@
       ],
       "@/css/*": [
         "css/*"
+      ],
+      "src/*": [
+        "src/*"
       ]
     },
     "resolveJsonModule": true,
