--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,7 @@
     "plaiceholder": "^2.5.0",
     "prettier": "^2.7.1",
     "sharp": "^0.31.1",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "@types/node-forge": "^1.3.11"
   }
 }
