--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "postinstall": "patch-package",
     "dev": "next dev",
     "build": "next build",
     "eslint": "eslint --cache 'src/**/*.{ts,tsx}'",
@@ -29,6 +30,7 @@
     "dayjs": "^1.11.6",
     "immer": "^9.0.15",
     "next": "12.3.1",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
@@ -40,6 +42,7 @@
     "@types/antd": "^1.0.0",
     "@types/axios": "^0.14.0",
     "@types/node": "18.11.3",
+    "@types/node-forge": "^1.3.11",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
@@ -56,7 +59,6 @@
     "plaiceholder": "^2.5.0",
     "prettier": "^2.7.1",
     "sharp": "^0.31.1",
-    "typescript": "4.8.4",
-    "@types/node-forge": "^1.3.11"
+    "typescript": "4.8.4"
   }
 }
